[tool.poetry]
name = "geospatial-optimization"
version = "0.1.0"
description = ""
authors = ["Timothy Wong <timothy.wong@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "geospatial_optimization"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pulp = "^3.2.1"
shapely = "^2.1.1"
matplotlib = "^3.10.3"
basemap = "^2.0.0"
basemap-data = "^2.0.0"
pyproj = "^3.7.1"
netcdf4 = "^1.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
